add ability to process selections from url params

--- a/Less/war/css/main.css
+++ b/Less/war/css/main.css
@@ -107,6 +107,24 @@
 }
 
 
+.less_word_back {
+	font-size: 1.5em;
+	padding-right: 8px;
+	position: relative;
+	top: 4px;
+	line-height: 54px;
+}
+
+.less_than_back {
+	border: solid;
+	padding-left: 6px;
+	padding-top: 4px;
+	padding-right: 1px;
+	display: inline-block;
+	border-radius: 5px;
+	position: relative;
+	top: -2px
+}
 
 
 
