--- a/Less/war/css/main.css
+++ b/Less/war/css/main.css
@@ -91,7 +91,10 @@
 
 
 .index_background {
-	 position: relative;
+	position: relative;
+/* 	width: 100%; */
+	border-radius: 50px;
+	padding-bottom: 40px;
     overflow: hidden;
 
     background-color: #283137;
@@ -106,10 +109,21 @@
     box-shadow: inset 0 -5px 20px rgba(255,255,255,.1);
 }
 
+.index_body_background {
+	background-color: rgb(194, 194, 194);	
+}
 
+.navbar-big {
+	background-color: #40454F;
+	margin-bottom: 30px;
+	margin-top: -60px;
+	padding: 10px 0px 30px;
+	height: 30px;
+}
 
-
-
-
-
+.navbar-big li a:hover {
+	color: #FFF;
+	text-decoration: none;
+	border-bottom: 2px solid #FFF;
+}
 
