Update design and layout of the index page

--- a/Less/war/css/main.css
+++ b/Less/war/css/main.css
@@ -89,30 +89,6 @@
 	margin-top: 9px;
 }
 
-
-.index_background {
-	position: relative;
-/* 	width: 100%; */
-	border-radius: 50px;
-	padding-bottom: 40px;
-    overflow: hidden;
-
-    background-color: #283137;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#14181c), to(#3c4a53));
-    background-image: -webkit-linear-gradient(bottom, #14181c, #3c4a53);
-    background-image: -moz-linear-gradient(bottom, #14181c, #3c4a53);
-    background-image: -o-linear-gradient(bottom, #14181c, #3c4a53);
-    background-image: -ms-linear-gradient(bottom, #14181c, #3c4a53);
-    background-image: linear-gradient(bottom, #14181c, #3c4a53);
-    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#14181c', EndColorStr='#3c4a53');
-
-    box-shadow: inset 0 -5px 20px rgba(255,255,255,.1);
-}
-
-.index_body_background {
-	background-color: rgb(194, 194, 194);	
-}
-
 .less_word_back {
 	font-size: 1.5em;
 	padding-right: 8px;
@@ -146,3 +122,24 @@
 	border-bottom: 2px solid #FFF;
 }
 
+.index_text_less {
+	margin-top: -10px;
+	font-size: 100px;
+	color: rgb(130, 130, 130);
+	margin-bottom: 30px;
+	font-family: 'Pacifico', cursive;
+}
+
+.index_text_more {
+	font-size: 40px;
+	margin-bottom: 25px;
+	color: rgb(130, 130, 130);
+	font-family: 'Raleway', sans-serif;
+}
+
+
+.index_body_background {
+	background-color: rgb(230, 230, 230);
+	margin-top: -1%;
+	width: 90%;	
+}
